progress on countdown timer

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <div id="pre-game">
         <p>Game instructions....</p>
-        <btn>Start Game</btn>
+        <button id="start-button">Start Game</button>
     </div>
 
     <div id="game">
-         <div id="timer-display">00:00</div>
+        <div id="timer-display">30 seconds remain to answer the question</div>
         <div id="question">Here is my question div</div>
         <button id="option1">Option1</button></br>
         <button id="option2">Option2</button></br>
@@ -24,6 +24,9 @@
         <button id="option4">Option4</button></br>
     </div>
 
+    <div id="answer">
+       After the timer runs out, this is the answer content! 
+    </div>
 
     <div id="post-game">
         <div id="results">Here is my results div</div>
